fix: add hdf5 file metadata endpoint to simdata-api
